--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/route-one">Route</a></li>
             </ul>
           </div>
         </div>
@@ -89,6 +90,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/route-one.js"></script>
         <!-- endbuild -->
 </body>
 </html>
