--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="container">
-    <div ng-view=""></div>
+    <div play-youtube ng-view=""></div>
     </div>
 
     <div class="footer">
@@ -89,6 +89,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/directives/play-youtube.js"></script>
         <!-- endbuild -->
 </body>
 </html>
